# ams562-notes

./: .clang-format  .gitignore  README.md  index.rst  review.rst
code/array/: array.hpp
code/meta/: meta_discovery.cc
code/polynomial/: Exercise.md  README.md  catch.hpp  main.cpp  poly_test.cpp  polynomial.cpp  polynomial.h
hw/array/: CMakeLists.txt  array.cpp
hw/polynomial/: Exercise.md  Makefile  polynomial.h
lecture_code/: main.cpp
lecture_code/algorithms/: isSafeBridge.cpp  squarePatch.cc  transform.cc
lecture_code/classes2/: Circle1.cc  Circle1.h  Container1.h  ListContainer1.h  Shape1.h  Smiley1.h  Vector.h  Vector1.h  Vector2.h  Vector_container1.h  array1.cc  array2.cc  classes.cpp  complex.cc  complex.h  complex1.cc  complex1.h  concrete1.cc  drawall.cc  helper1.cc  init_list.h  main_complex.cc  main_vector.cc  main_vector1.cc  memberfunctions1.h  read_vector.h  rotateall.cc  use.cc  use1.cc  use2.cc
lecture_code/essential_operations/: Bector.cpp  Bector.h  Bector1.cpp  Shapes.h  Vector.h  Vector1.h  Vector_add.cpp  Vector_assignment.h  Vector_assignment1.h  Vector_copy.cc  Vector_copy.h  Vector_copy_assignment.cc  Vector_copy_constructor.cc  Vector_move.cc  Vector_move_assignment.cc  bad_copy.cc  class_ex.cpp  complex.h  complex1.h  complex_copy_test.cc  copy_pointer.cpp  default_members.cpp  delete_operator.cpp  eliding_copy.cpp  essential1.cpp  good_copy.cc  move_example.cc  special_members.cpp  special_members1.cpp
lecture_code/lecture0/: hello_world.cpp
lecture_code/lecture2/: const_constexpr.cpp  deallocation.cpp  (+9 more)
lectures/algorithms/code/: CMakeLists.txt  entries.txt  examples.h  find.cpp  find2.cpp  find3.cpp  find4.cpp  findall2.h  kamal_ranadive.txt  predicates.cpp  sort_entry.cpp  sort_entry2.cpp  sort_entry_val.cpp
lectures/algorithms/code/testing/: CMakeLists.txt  main.cpp  problems.cc  problems.h  vector_main.cpp
lectures/container_algo/code/: CMakeLists.txt  Complex.h  examples.h  print_complex.cc  vector_init.cpp  vector_print.cpp  vector_range_checking.cpp  vector_range_checking2.cpp
lectures/container_algo/code/testing/: VectorT.h
lectures/containers/code/: CMakeLists.txt  Complex.cpp  Vector.h  VectorRangeCheck.h  VectorTpush_back.cpp  examples.h  list_example.cpp  list_example2.cpp  list_example3.cpp  map_example1.cpp  map_example2.cpp  print_complex.cc  range_checking_main.cpp  unorderd_map2.cpp  unordered_map_example1.cpp  vector_init.cpp  vector_print.cpp  vector_print2.cpp  vector_push_back.cpp  vector_range_checking.cpp  vector_range_checking2.cpp  vector_size_init.cpp
lectures/containers/code/testing/: solutions.cc  tests.cpp
(+187 files in other folders)
